--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
+		"@testing-library/jest-dom": "^5.11.3",
+		"@testing-library/react": "^10.4.8",
+		"@testing-library/user-event": "^12.1.1",
+		"@types/enzyme": "^3.10.5",
+		"@types/enzyme-adapter-react-16": "^1.0.6",
+		"@types/jest": "^26.0.10",
 		"@types/material-ui": "^0.21.7",
 		"@types/node": "^14.0.27",
 		"@types/react": "^16.9.46",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
@@ -19,6 +27,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -35,5 +44,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"react-test-renderer": "^16.13.1"
 	}
 }
